add socket proj

--- a/ImageDisplayTool/ImageDisplayTool.vcxproj.filters
+++ b/ImageDisplayTool/ImageDisplayTool.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="Log.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Socket.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageDisplayTool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Log.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Socket.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
