--- a/ImageDisplayTool/ImageDisplayTool.vcxproj
+++ b/ImageDisplayTool/ImageDisplayTool.vcxproj
@@ -130,10 +130,12 @@
   <ItemGroup>
     <ClInclude Include="ImageDisplayTool.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="Socket.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageDisplayTool.cpp" />
     <ClCompile Include="Log.cpp" />
+    <ClCompile Include="Socket.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
