--- a/ImageDisplayTool/ImageDisplayTool.vcxproj.filters
+++ b/ImageDisplayTool/ImageDisplayTool.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Socket.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ImagePixelFormatToRGBA.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageDisplayTool.cpp">
@@ -33,6 +36,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Socket.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ImagePixelFormatToRGBA.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
