--- a/ImageDisplayTool/CMakeLists.txt
+++ b/ImageDisplayTool/CMakeLists.txt
@@ -8,5 +8,18 @@ project (ImageDisplayTool)
 # 并将名称保存到 DIR_SRCS 变量
 aux_source_directory(. DIR_SRCS)
 
+
+# 设置静态库生成路径
+if (WIN32)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../Install/Win/x64/Release)
+elseif (APPLE)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../Install/Mac/x64/Release)
+elseif (UNIX)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../Install/Linux/x64/Release) 
+endif ()
+
 # 生成链接库
 add_library(ImageDisplayTool ${DIR_SRCS})
+
+
+
